* Added vertical button group * Fixed a small layout issue in (horizontal) button groups * Added TOC cfr. Core Branding

--- a/src/styles/styleguide.scss
+++ b/src/styles/styleguide.scss
@@ -36,7 +36,7 @@ footer {
   }
 
   > div {
-    flex: 1 1 0;
+    flex: 1 1 auto;
     padding: $spacer / 4 $spacer 0;
 
     @include at($screen-sm) {
@@ -45,46 +45,68 @@ footer {
   }
 }
 
-.d-h1 {
-  background: $brand-primary;
-  background-size: 400% 100%;
-  color: $white;
-  margin-bottom: $spacer * -4;
-  padding-bottom: $spacer;
-  padding-top: $spacer * 2;
-
-  @include to($screen-xs) {
-    padding-top: $spacer * 4;
+.d-intro {
+  > div {
+    flex: 1 1 auto;
   }
+}
+
+.u-margin-bottom-top-xxs {
+  margin: $spacer-xs / 2 0;
+}
+
+.d-toc {
+  display: flex;
+  flex-wrap: wrap;
+
+  &__cell {
+    flex: 0 0 50%;
+
+    @include at($screen-sm) {
+      flex: 0 0 (100% / 3);
+    }
+
+    @include at($screen-lg) {
+      flex: 0 0 (100% / 6);
+    }
+  }
+}
+
+.a-list__toc {
+  margin: 0;
+  padding-bottom: $spacer;
+
+  li {
+    padding-bottom: 0;
+  }
+}
+
+.line {
+  border-top: 1px solid $border-color;
+}
+
+.d-h1 {
+  background-color: $brand-primary;
+  color: $grey-lighter;
+  padding-bottom: $spacer;
+  padding-top: $spacer * 3.5;
 
   small {
-    color: $white;
+    color: $grey-light;
+  }
+
+  @include at($screen-xs) {
+    padding-bottom: $spacer * 2.5;
+    padding-top: $spacer * 2.5;
   }
 }
 
 .d-h2 {
-  // background: $sun;
-  background: $black;
-  color: $white;
-  margin-bottom: $spacer * 2;
-  margin-top: $spacer * 4;
-  padding-bottom: $spacer / 2;
   padding-top: $spacer;
 }
 
 .d-h3 {
-  margin-top: $spacer * 4;
-  position: relative;
-
-  &:before {
-    background: $black;
-    content: '';
-    display: block;
-    height: $spacer * 3 / 2;
-    left: $spacer * -2;
-    position: absolute;
-    width: $spacer * 3 / 2;
-  }
+  margin-top: $spacer * 2;
 }
 
 .d-h4 {
@@ -238,6 +260,10 @@ footer {
   padding: $spacer;
 }
 
+.d-avatar {
+  margin-top: $spacer-xs / 4;
+}
+
 .d-nav-list {
   margin-bottom: $spacer * 2;
 }
@@ -266,11 +292,12 @@ footer {
   label {
     box-shadow: none;
     height: auto;
+    margin-bottom: $spacer / 2;
     position: static;
     width: auto;
 
-    @include to($screen-xs) {
-      margin-bottom: $spacer / 2;
+    @include at($screen-sm) {
+      margin-bottom: 0;
     }
 
     &:after {
@@ -280,19 +307,5 @@ footer {
 
   .m-modal__footer [class*='a-button'] {
     margin-bottom: 0;
-  }
-}
-
-@keyframes rainbow {
-  0% {
-    background-position: 0% 0%;
-  }
-
-  50% {
-    background-position: 46.25% 0%;
-  }
-
-  100% {
-    background-position: 92.5% 0%;
   }
 }
